--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 		</header>
 		<ul class="navbar-nav">
 			<li class="nav-item"><button id="link1">Home</button></li>
-			<li class="nav-item"><button id="link2">Projects</button></a></li>
+			<li class="nav-item"><button id="link2">Projects</button></li>
 			<li class="nav-item"><a href="https://github.com/Graatz"><span class="icon-github-circled" aria-label="GitHub"></span></a></li>
 			<li class="nav-item"><a href="#"><span class="icon-google-plus-circle" aria-label="GooglePlus"></span></a></li>
 		</ul>
