--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Portfolio</title>
 	<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Oswald:300,400,500,700|Raleway:300,400,800">
+	<link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,700|Quicksand" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=Quicksand:400,700" rel="stylesheet">
 	<link rel="stylesheet" href="css/fontello.css">
 	<link rel="stylesheet" href="css/small.css">
 	<link rel="stylesheet" href="css/medium.css">
@@ -26,17 +28,18 @@
 		<div id="slider">
 
 			<section id="home-wrapper" class="active">
+				<div class="background"><p>About me</p></div>
 				<div class="top-row"></div>
 				<div class="align-items-center justify-content-center middle-row">
-					<div class="col text-center align-items-center ">
-						<h1><strong class="primary-color">Lorem</strong> ipsum <strong class="secondary-color">dolor</strong> sit <strong>amet</strong></h1>
-						<h2>Lorem <strong class="primary-color">ipsum</strong> <strong class="secondary-color">dolor</strong> sit</h2>
-						<h3>WEB <strong class="secondary-color">DEVELOPER</strong> / <strong class="primary-color">DESIGNER</strong></h3>
+					<div class="col">
+						<h1><strong class="primary-color">Lorem</strong> ipsum <strong class="secondary-color">dolor</strong> <strong>sit</strong> amet</h1>
 						<p class="description">
-							At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque corrupti quos dolores
-							et quas molestias excepturi sint occaecati cupiditate non provident, similique sunt in culpa qui officia deserunt mollitia animi, id est laborum et dolorum fuga.<br><br>
-							&copy Copyright 2017 Jakub Kosior
-						</p>
+							Welcome to my portfolio! My name is Jakub and im a computer science student from Poland.
+							As you probably already figured it out, i like programming. As a hobby, I love game development and graphic design.
+							Im specialising in the following technologies: C#, ASP. NET MVC, WinForms, HTML, CSS, JavaScript.
+							Feel free to check out my projects down below.
+						</p><br>
+						<small class="copyright">&copy Copyright 2017 Jakub Kosior</small>
 					</div>
 				</div>
 				<div class="bottom-row align-items-center justify-content-center">
